test environment of serverless

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -6,12 +6,11 @@ pipelines:
       - step:
           deployment: production
           caches:
-            - nodemodules
+            - node
           script:
             - npm install --no-package-lock
+            - cp .env.example .env
+            - sed -i 's/API_KEY_GOOGLE_TRANSLATE=/API_KEY_GOOGLE_TRANSLATE=$API_KEY_GOOGLE_TRANSLATE/g' .env
+            - cat .env
             - npm run test
             - npm run deploy
-
-definitions:
-  caches:
-    nodemodules: node_modules
