--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --verbose",
-    "eslint": "eslint . --ext .js  --fix ",
+    "lint": "eslint . --ext .js",
+    "lint:fix": "eslint . --ext .js  --fix",
     "deploy": "serverless deploy -v",
     "serverless": "serverless invoke local --function",
     "serverless-offline": "nodemon --exec \"serverless offline --host 0.0.0.0\""
@@ -16,10 +17,12 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bluebird": "^3.7.2",
+    "google-translate": "^3.0.0",
     "json-web-crawler": "^0.8.1",
     "lodash": "^4.17.15"
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "eslint": "6.1.0",
     "eslint-config-asksuite": "^1.1.2",
     "eslint-config-prettier": "^6.5.0",
@@ -35,7 +38,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run eslint && npm run test"
+      "pre-commit": "npm run lint:fix && npm run test"
     }
   }
 }
