using dotenv serverless dotenv plugin

--- a/serverless.yml
+++ b/serverless.yml
@@ -1,10 +1,11 @@
 service: asksuite-lambda-function
-
+plugins:
+  - serverless-dotenv-plugin
 provider:
   name: aws
   runtime: nodejs10.x
   environment:
-    API_KEY_GOOGLE_TRANSLATE: ${file(../config.js):API_KEY_GOOGLE_TRANSLATE}
+    API_KEY_GOOGLE_TRANSLATE: ${env:API_KEY_GOOGLE_TRANSLATE}
 functions:
   executor_128:
     handler: src/executor/handler.handler
