--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nodemon": "^2.0.2",
     "prettier": "^2.0.4",
     "serverless": "1.49.0",
+    "serverless-dotenv-plugin": "^2.4.2",
     "serverless-offline": "5.10.1",
     "serverless-prune-plugin": "1.4.0"
   },
