--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -38,4 +38,4 @@ pipelines:
             - git remote add origin_github $GITHUB_REMOTE_REPO_URL
             - git add .
             - git commit -m "$COMMIT_MESSAGE"
-            - git push  --force origin_github master
+            - git push  -u origin_github master # Set upstream
