--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -12,6 +12,7 @@ pipelines:
             - npm install --no-package-lock
             - cp .env.example .env
             - sed -i "s/API_KEY_GOOGLE_TRANSLATE=/API_KEY_GOOGLE_TRANSLATE=$API_KEY_GOOGLE_TRANSLATE/g" .env
+            - sed -i "s/SERVICE_NAME=/SERVICE_NAME=asksuite-lambda-function/g" .env
             - npm run test
             - npm run deploy
       - step:
@@ -20,6 +21,7 @@ pipelines:
             - node
           script:
             - rm bitbucket-pipelines.yml
+            - sed -i "s/SERVICE_NAME=/SERVICE_NAME=lambda-code-snippet/g" .env.example
 
             - COMMIT_MESSAGE=`git log --format=%B -n 1 $BITBUCKET_COMMIT`
 
