Added currency symbol map  as dependency

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.19.2",
     "bluebird": "^3.7.2",
     "cheerio": "^1.0.0-rc.3",
+    "currency-symbol-map": "^5.0.1",
     "google-translate": "^3.0.0",
     "json-web-crawler": "^0.8.1",
     "lodash": "^4.17.15",
