--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "csvtojson": "^2.0.10",
     "currency-symbol-map": "^5.0.1",
     "google-translate": "^3.0.0",
+    "isomorphic-fetch": "^3.0.0",
     "json-web-crawler": "^0.8.1",
     "lodash": "^4.17.15",
     "moment": "^2.27.0"
